--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rxgen",
+  "name": "reactive-gen",
   "version": "1.0.0",
   "description": "Receive data yield from generator using RxJS",
   "main": "index.js",
